toplist.scss from scratch

--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -10,6 +10,8 @@ $topWeek: url("https://i.imgur.com/tU8Fe4v.gif") no-repeat 0 0;
 $topSuccess: url("https://i.imgur.com/hu7hoxL.gif") no-repeat 0 0;
 $topNOError: url("https://i.imgur.com/0YuLUlO.gif") no-repeat 0 0;
 
+$book-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="lightblue" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg>') no-repeat center / 16px 16px;
+
 // virtual keyboard btn
 $virtualKeyboard: url("https://i.imgur.com/CVbMpI4.png") no-repeat;
 
@@ -268,3 +270,4 @@ $write-comment-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/
 
 $show-comments-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$darkgray}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>')
   no-repeat center / contain;
+
