toplist.scss refinement #2

--- a/src/toplist.scss
+++ b/src/toplist.scss
@@ -1,6 +1,7 @@
 @import "./data/variables";
 
 #toplist {
+  font-family: "Montserrat", Verdana, Geneva, Tahoma, sans-serif;
   display: inline-flex !important;
   justify-content: center !important;
   gap: 10px !important;
@@ -204,12 +205,25 @@
           margin: 5px 0 !important;
           padding: 5px !important;
           height: 70px !important;
+          position: relative !important;
 
           .offset_up,
-          .offset_down,
-          td:first-child {
+          .offset_down {
+            position: absolute !important;
+            top: 0 !important;
+            right: 10px !important;
             width: 50px !important;
             justify-content: center !important;
+            font-weight: 700 !important;
+            font-size: 1.1em !important;
+          }
+
+          .offset_up {
+            color: $green !important;
+          }
+
+          .offset_down {
+            color: $red !important;
           }
 
           .pos {
@@ -218,7 +232,7 @@
           }
 
           th.name {
-            margin-right: 110px !important;
+            margin-right: 120px !important;
           }
 
           .name {
@@ -253,7 +267,7 @@
 
           .highlight {
             margin-right: 15px !important;
-            min-width: 90px !important;
+            min-width: 140px !important;
 
             + td,
             + td + td,
