--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -98,18 +98,14 @@
         }
 
         .info {
-          .author,
-          .date {
-          }
-          .author {
-          }
-          .date {
-          }
+          display: inline-flex !important;
+          align-items: center !important;
+          gap: 5px !important;
         }
       }
 
       .link {
-        width: 50% !important;
+        width: calc(50% + 15px) !important;
         height: 32px !important;
         display: flex !important;
         justify-content: center !important;
@@ -119,6 +115,8 @@
         background-color: $gray !important;
         bottom: 0 !important;
         transition: background-color 0.15s ease !important;
+        position: sticky !important;
+
         &:hover {
           background-color: $blue !important;
         }
@@ -129,6 +127,8 @@
       }
 
       .write {
+        margin-left: -15px !important;
+        float: left !important;
         left: 0 !important;
         border-right: 1px solid $black !important;
         i {
@@ -137,6 +137,8 @@
       }
 
       .other {
+        margin-right: -15px !important;
+        float: right !important;
         left: 50% !important;
         i {
           background: $show-comments-icon !important;
