cleanups for forum.scss write block into separate file as a component

--- a/src/main.scss
+++ b/src/main.scss
@@ -43,6 +43,7 @@
 @import "popupBox";
 @import "popupDialogue";
 @import "smiles";
+@import "write-block";
 
 // -----------------------------------------------------------------------------
 // 6. PAGES & SECTIONS
