--- a/src/write-block.scss
+++ b/src/write-block.scss
@@ -15,9 +15,12 @@
   transition: height 0.15s ease, width 0.25s ease !important;
   cursor: pointer !important;
 
-  // Content should be hidden initially
   #write-block {
     opacity: 0 !important;
+    height: 100% !important;
+    display: flex !important;
+    flex-direction: column !important;
+    box-sizing: border-box !important;
   }
 
   &:hover #write-block,
@@ -36,9 +39,8 @@
   }
 
   textarea {
-    margin: 10px 0 !important;
+    flex: 1 !important;
     resize: none !important;
-    height: calc(80vh - 110px) !important;
     border-radius: 5px !important;
     padding: 10px !important;
     background-color: $black !important;
@@ -47,15 +49,16 @@
     font-size: 1.2em !important;
   }
 
-  // Button container styling
-  p:has(input) {
-    display: flex !important;
-    position: absolute !important;
+  p {
     margin: 0 !important;
     padding: 0 !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
+  }
+
+  // Button container styling
+  p:has(input) {
+    margin: 10px 0 !important;
+    display: flex !important;
+    flex-shrink: 0 !important;
 
     input {
       border: none !important;
@@ -70,6 +73,7 @@
     }
 
     input[name="send"] {
+      border-radius: 5px 0 0 5px !important;
       border-right: 1px solid $black !important;
       background: $gray $send-icon no-repeat 15px center / 24px !important;
 
@@ -79,6 +83,7 @@
     }
 
     input[name="preview"] {
+      border-radius: 0 5px 5px 0 !important;
       background: $gray $preview-icon no-repeat 15px center / 24px !important;
 
       &:hover {
